# domainrobot-python

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
docs/: conf.py  index.md  quickstart.md  requirements.txt
docs/api/: client.md  exceptions.md  models.md  response.md  services.md
src/domainrobot/: __init__.py  _http.py  client.py  exceptions.py  headers.py  response.py
src/domainrobot/models/: __init__.py  _base.py  resources.py
src/domainrobot/services/: _base.py  account.py  backup_mx.py  certificate.py  contact.py  domain.py  domain_studio.py  hello.py  job.py  mail_proxy.py  poll.py  redirect.py  session.py  ssl_contact.py  subscription.py  transfer_out.py  user.py  zone.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_http.py  test_model_integration.py  test_models.py  test_response.py
tests/services/: test_account.py  test_backup_mx.py  test_certificate.py  test_contact.py  test_domain.py  test_domain_studio.py  test_hello.py  test_job.py  test_mail_proxy.py  test_poll.py  test_redirect.py  test_session.py  test_ssl_contact.py  test_subscription.py  test_transfer_out.py  test_user.py  test_zone.py
