[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domainrobot"
version = "0.0.1"
description = "Python client for the Domainrobot JSON API (InterNetX/AutoDNS)"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.25,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "pyright>=1.1",
    "respx>=0.21",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/DigitalTolk/domainrobot-python"

[tool.hatch.build.targets.wheel]
packages = ["src/domainrobot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
